# string_space

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DATA_FORMAT.md  DONE.md  ENGINEERING_GUIDELINES.md  LICENSE  Makefile  README.md  SPEC.md  TODO.md  benchmarks.md  client.py  daemon.md  main.py  package.json  pyproject.toml  setup_opt_local_bin.sh  string_space_client.py  test_hanging_client.py  test_large_insert.py  word_space.md
.claude/commands/: review-readme.md  wdd
admin/best_completions/: analysis.md  grand_plan.md  master_plan.md  scoring.md  test_plan.md
admin/best_completions_protocol/: master_plan.md
admin/best_opt/: master_plan.md
admin/deadlock/: NEXT_STEPS.md  implementation_plan.md  issue.md  plan.md  proposal.md  resolution-proposal.md  server-timeout-plan.md  server-timeout-status.md  status.md  technical_analysis.md
admin/fuzzy-search/: feature-spec.md
admin/fuzzy-subsequence-search/: feature_spec.md  master_plan.md
admin/lua-client/: context.md  lua-client-plan.md
admin/sample/: master_plan.md
admin/ss_refactor/: master_plan.md  short_plan.md
admin/ts-client/: ts-client-plan.md  ts-client-status.md
llm/: scp.md
lua/: test_client.lua
lua/string-space-client/: init.lua
python/: autocompleter.py  cm_test.py  string_space_client.py
python/string_space_client/: __init__.py  pyproject.toml  run_tests.sh  string_space_client.py  test_string_space_client.py
python/string_space_client/string_space_client.egg-info/: PKG-INFO  SOURCES.txt
python/string_space_completer/: __init__.py  pyproject.toml  string_space_completer.py
scripts/: bump-version.sh
src/: integration_test.rs  main.rs  performance_test.rs
string_space.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: autocompleter.py  client.py  import.py  manual_test.sh  reproduce_deadlock.sh  reproduce_hang.sh  run_lua_tests.sh  run_tests.sh  run_ts_tests.sh  simple_reproduce_hang.sh  string_space_client.py  test_best_completions_integration.py  test_hang.py  test_hanging_client.py  test_manual.py  test_protocol_validation.py  test_real_hang.py  ts_add_words.ts  ts_best_completions.ts  ts_client.ts  ts_protocol.ts
typescript/: package.json  string-space-client.ts
(+54 files in other folders)
