[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "string_space"
version = "0.6.0" # highest version of string-space-client and string-space-completer
description = "A package for string space operations"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.12"
dependencies = [
    "jaro-winkler>=2.0.3",
    "prompt-toolkit>=3.0",
    "string-space-client",
    "string-space-completer",
]

[tool.uv.sources]
string-space-client = { path = "python/string_space_client", editable = true }
string-space-completer = { path = "python/string_space_completer", editable = true }
