[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "string_space_client"
version = "0.4.0"
description = "A package for string space operations"
authors = [{name = "Bill Doughty", email = "your.email@example.com"}]

[tool.setuptools.packages.find]
where = [".."] # relative to pyproject.toml - IMPORTANT - can't be "."