[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "string_space_completer"
version = "0.5.0"
description = "A prompt_toolkit completion client for string.space"
authors = [{name = "Bill Doughty", email = "your.email@example.com"}]
requires-python = ">=3.12"
dependencies = [
    "string-space-client",
    "prompt-toolkit>=3.0",
]

[tool.setuptools.packages.find]
where = [".."] # relative to pyproject.toml - IMPORTANT - can't be "."

[tool.uv.sources]
string-space-client = { path = "../string_space_client", editable = true }
